# ace-finer

./: .env.sample  .gitignore  EXPERIMENTS.md  IMPLEMENTATION_PLAN.md  README.md  guardrails.py  main.py  metrics.py  pyproject.toml  runner.py  state.py
.beads/: issues.jsonl
agents/: __init__.py  curator.py  generator.py  llm.py  reflector.py
data/: __init__.py  labels.py  pipeline.py
playbook/: __init__.py  schema.py  store.py
tests/: __init__.py  test_generator.py  test_guardrails.py  test_labels.py  test_pipeline.py  test_playbook.py
