[project]
name = "ace-finer"
version = "0.1.0"
description = "Agentic Context Engineering for FiNER-139 XBRL tagging"
requires-python = ">=3.11"

dependencies = [
    "datasets>=2.14.0,<3.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "playbook", "agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
